Added basic HTML

--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
         <h1>Stability</h1>
         <p>Enter your information below to track your daily progress</p>
     </header>
-    <label for="name">Name:</label> 
-    <input type="text" name="name" id="name"><br><br>
-
-    <label for="email">Name:</label> 
-    <input type="email" name="email" id="email"><br><br>
-
+    <label for="exercise">Did you exercise today?</label> 
+    Yes <input type="checkbox" name="name" id="name">
+    No <input type="checkbox" name="name" id="name">
+    <br><br>
+    <label for="diet">Did you eat healthy today?</label> 
+    Yes <input type="checkbox" name="name" id="name">
+    No <input type="checkbox" name="name" id="name">
+    <br><br>
+    <label for="diet">Did you sleep more than 7 hours today?</label> 
+    Yes <input type="checkbox" name="name" id="name">
+    No <input type="checkbox" name="name" id="name">
+    <br><br>
     <button id="submit">Submit</button>
         
     <script src="./script.js"></script>
