--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,7 +25,11 @@
     No <input type="checkbox" name="name" id="name">
     <br><br>
     <button id="submit">Submit</button>
-        
+    <button id="chartBtn">Chart</button>
+    <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
+
     <script src="./script.js"></script>
+    <script type="text/javascript", src="./graph.js"></script>
+    <script> src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"</script>
 </body>
 </html>
