--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <button id="chartBtn">Chart</button>
     <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
 
-    <script src="./script.js"></script>
-    <script type="text/javascript", src="./graph.js"></script>
+    <script src="./assets/js/script.js"></script>
+    <script type="text/javascript", src="./assets/js/graph.js"></script>
     <script> src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"</script>
 </body>
 </html>
