Added two APIs - Link to wellness articles & quotes

--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
     Yes <input type="checkbox" name="name" id="name">
     No <input type="checkbox" name="name" id="name">
     <br><br>
-    <button id="submit">Submit</button>
+    <button id="submit">Submit</button><br><br>
+    <div id="results">
+        <p>URL:<a href="" id="url"></a></p>
+        <p>Source:<span id="source"></span></p><br><br>
+    </div>
         
-    <script src="./script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
