added radar graph

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     </div>
         
     <button id="chartBtn">Chart</button>
+    <button id="chartRBtn">Radar</button>
     <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
+    <canvas id="myChartR" style="width:100%;max-width:700px"></canvas>
 
     <script src="./assets/js/script.js"></script>
     <script type="text/javascript", src="./assets/js/graph.js"></script>
