added functions to add values to charts

--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
         
     <button id="chartBtn">Chart</button>
     <button id="chartRBtn">Radar</button>
+    <button id="clearStorage">Clear Storage</button>
     <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
-    <canvas id="myChartR" style="width:100%;max-width:700px"></canvas>
+    <canvas id="myChartR" style="width:100%;max-width:800px"></canvas>
 
-    <script src="./assets/js/script.js"></script>
     <script type="text/javascript", src="./assets/js/graph.js"></script>
+    <script src="./assets/js/script.js"></script>
     <script> src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"</script>
 </body>
 </html>
