--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 
 </head>
 <body>
-    <header class="center">
+    <header">
         <h1><p style="text-align:center">STABILITY</p></h1>
         <h2><p style="text-align:center">Track your days to gain STABILITY</p></h2>
     </header>
-   <h3><label for="exercise">Did you exercise today?</label> </h3>
+     <div class="section">
+    <h3> <label for="exercise">Did you exercise today?</label> </h3>
     Yes <input type="checkbox" name="exercise" id="exerciseYes" value= "0.75">
     No <input type="checkbox" name="exercise" id="exerciseNo" value="0.25">
     <br><br>
@@ -35,7 +36,8 @@
     Good <input type="checkbox" name="mood" id="moodGood" value= "0.75">
     Normal <input type="checkbox" name="mood" id="moodNormal" value="0.5">
     Bad <input type="checkbox" name="mood" id="moodBad" value="0.25">
-
+</div>
+    <img src="wellnessstockphoto-687504712-612x612.jpeg" alt="Wellness Buzzwords">
     <br><br>
    <button id="submit">Submit</button><br><br>
     <div id="results">
