--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/pure/pure-min.css">
-    <link rel="stylesheet" href="/css/pure/grids-responsive-min.css">
-    <link rel="stylesheet" href="/layouts/gallery/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <title>Stability</title>
 
@@ -20,7 +16,7 @@
         <h1><p style="text-align:center">STABILITY</p></h1>
         <h2><p style="text-align:center">Track your days to gain STABILITY</p></h2>
     </header>
-     <div class="section">
+    <img src="./istockphoto-1345067488-612x612.jpeg" alt="Wellness Buzzwords" style="float:right"/>
     <h3> <label for="exercise">Did you exercise today?</label> </h3>
     Yes <input type="checkbox" name="exercise" id="exerciseYes" value= "0.75">
     No <input type="checkbox" name="exercise" id="exerciseNo" value="0.25">
@@ -37,14 +33,12 @@
     Good <input type="checkbox" name="mood" id="moodGood" value= "0.75">
     Normal <input type="checkbox" name="mood" id="moodNormal" value="0.5">
     Bad <input type="checkbox" name="mood" id="moodBad" value="0.25">
-</div>
-    <img src="wellnessstockphoto-687504712-612x612.jpeg" alt="Wellness Buzzwords">
     <br><br>
    <button id="submit">Submit</button><br><br>
     <div id="results">
-        <p>URL:<a href="" id="url"></a></p>
-        <p>Source:<span id="source"></span></p>
-        <p>Predicted Mood:<span id="predictedMood"></span></p>
+       <h2><p>URL:<a href="" id="url"></a></p></h2>
+       <h2><p>Source:<span id="source"></span></p></h2>
+       <h2><p>Predicted Mood:<span id="predictedMood"></span></p></h2>
     </div>
         
     <button id="chartBtn">Chart</button>
