fixed a minor bug in the generateHistory function

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <section id="moodHistory">
         <h2 class="moodHistory">Mood History</h1>
-        <div class="pure-g center">
+        <div id="clearHistory" class="pure-g center">
         </div>
     </section>
 
