--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <button id="chartRBtn">Radar</button>
     <button id="clearStorage">Clear Storage</button>
     <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
-    <canvas id="myChartR" style="width:100%;max-width:800px"></canvas>
+    <canvas id="chartRadar" style="width:100%;max-width:800px"></canvas>
     </section>
 
     <section id="moodHistory" hidden>
