--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
         
     <button id="chartBtn">Chart</button>
-    <button id="chartRBtn">Radar</button>
+    <button id="chartRadarBtn">Radar</button>
     <button id="clearStorage">Clear Storage</button>
     <canvas id="chartLinePlot" style="width:100%;max-width:700px"></canvas>
     <canvas id="chartRadar" style="width:100%;max-width:800px"></canvas>
