Change Line Plot button Name

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
        <h2><p>Predicted Mood:<span id="predictedMood"></span></p></h2>
     </div>
         
-    <button id="chartBtn">Chart</button>
+    <button id="chartLinePlotBtn">Chart</button>
     <button id="chartRadarBtn">Radar</button>
     <button id="clearStorage">Clear Storage</button>
     <canvas id="chartLinePlot" style="width:100%;max-width:700px"></canvas>
