--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="pure-u-1-3" style="text-align: right;"><input type="checkbox" name="mood" id="moodGood" value= "0.75"> Good</div>
                     <div class="pure-u-1-3"><input type="checkbox" name="mood" id="moodNormal" value="0.5"> Normal</div>
                     <div class="pure-u-1-3" style="text-align: left;"><input type="checkbox" name="mood" id="moodBad" value="0.25"> Bad</div>
-                    <div class="pure-u-1"><button id="submit" class="submitBtn">Submit</button></div>
+                    <div class="pure-u-1"><button id="submit" class="submitBtn button-style">Submit</button></div>
                 </label>
             </div>
         </div>
