--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
         </div>
     </section>
     <section id="section3" hidden>
-    <div class="results" id="results">
-       <h2><p>URL:<a href="" id="url"></a></p></h2>
-       <h2><p>Source:<span id="source"></span></p></h2>
-       <h2><p>Quote:<span id="predictedMood"></span></p></h2>
+    <div class="results" id="results" hidden>
+        <h2><p>Please visit the following resource on mental health:</p></h2> 
+        <h2><p><a href="" id="url"></a></p></h2>
+        <h2><p>Source: <span id="source"></span></p></h2>
+        <h2><p><span id="predictedMood"></span></p></h2>
     </div>
 
     <div class="charts">
